--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>Punkapi</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Punk API</title>
   <link href="style.css" rel="stylesheet" />
 </head>
 
@@ -15,12 +17,30 @@
           <img src="assets/logo.png" alt="nav icon">
         </div>
         <ul class="nav-items">
-          <li>HOME</li>
-          <li>BEERS</li>
-          <li>CONTACT</li>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">BEERS</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
       </div>
-      <div class="hero-section">
+      <table>
+        <td>
+          <tr>
+            <td class="hero-section">
+              <div class="hero-container">
+                <div class="hero-title">Great IPA</div>
+                <div class="hero-text">Some hops is plowed. An often hairy girl scout thoroughly makes a pact with the Honey Brown
+                  over
+                  the Budweiser. A blood clot makes a pact with the discusting satellite brewery. A lower about the Pilsner Urquell
+                  takes a peek at the bottle of beer. The coors light, the crank case of an IPA, and a Citra Ninja are what made
+                  America
+                  great!</div>
+              </div>
+            </td>
+            <td class="hero-section-2"></td>
+          </tr>
+        </td>
+      </table>
+      <!-- <div class="hero-section">
         <div class="hero-container">
           <div class="hero-title">Great IPA</div>
           <div class="hero-text">Some hops is plowed. An often hairy girl scout thoroughly makes a pact with the Honey Brown over
@@ -29,7 +49,7 @@
             great!</div>
         </div>
         
-      </div>
+      </div> -->
     </div>
     <div id="beers"></div>
     <div id="footer">
