load more button

--- a/index.html
+++ b/index.html
@@ -40,18 +40,15 @@
           </tr>
         </td>
       </table>
-      <!-- <div class="hero-section">
-        <div class="hero-container">
-          <div class="hero-title">Great IPA</div>
-          <div class="hero-text">Some hops is plowed. An often hairy girl scout thoroughly makes a pact with the Honey Brown over
-            the Budweiser. A blood clot makes a pact with the discusting satellite brewery. A lower about the Pilsner Urquell
-            takes a peek at the bottle of beer. The coors light, the crank case of an IPA, and a Citra Ninja are what made America
-            great!</div>
-        </div>
-        
-      </div> -->
     </div>
     <div id="beers"></div>
+    <div class="load-more-section">
+      <button class="load-more-button">
+        <div>
+          Load More
+        </div>
+      </button>
+    </div>
     <div id="footer">
       <div class="footer-black">
         <img class="footer-logo" src="assets/logo.png" alt="footer icon">
