--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <ul class="nav-items">
           <li><a href="#">HOME</a></li>
-          <li><a href="#">BEERS</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="#beers">BEERS</a></li>
+          <li><a href="#footer">CONTACT</a></li>
         </ul>
       </div>
       <table>
